--- a/rlmol/env.yml
+++ b/rlmol/env.yml
@@ -7,6 +7,7 @@ channels:
   # - pytorch
   # - anaconda
 dependencies:
+  - meeko
   - python=3.10.9
   - mgltools=1.5.7
   - pymol-open-source=2.5.0
